# datathon

./: .dockerignore  .gitignore  Dockerfile  Makefile  docker-compose.yml  pyproject.toml
data/: data.xlsx  database.duckdb
data/duckdb/: datathon.db
data/queries/: create_refined_table.sql  merge_refined_tables.sql  school.sql
datathon/: db.py
datathon/api/: main.py
datathon/api/models/: model.py  predict.py
datathon/api/routes/: info.py  model.py  predict.py
datathon/api/util/: model.py
datathon/dashboard/: main.py
datathon/modeling/: train.py
datathon/preprocessing/: clean.py  columns.py  mapping.py  pipeline.py  transformations.py
models/: lag_worsening.pkl
notebooks/: exploration.ipynb  exploration.py
reports/: dashboard.py
scripts/: api_examples.sh
tests/: conftest.py  test_api.py  test_models.py
