[project]
name = "datathon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "duckdb>=1.4.4",
    "fastapi[standard]>=0.129.2",
    "matplotlib>=3.10.0",
    "pandas>=2.2.0",
    "scikit-learn>=1.8.0",
    "streamlit>=1.41.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["datathon"]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "pytest>=8.0.0",
]
